# nuclei-segmentation

./: .gitignore  README.md  Unet.ipynb  best_history.csv  pyproject.toml  submission.csv  temp.txt
doc/: slides.pptx
src/: main.py  nuclei.py
src/model/: analyze.py  augmentation.py  config.py  data.py  evaluation.py  inference.py  metrics.py  model.py  post_processing.py  pre_processing.py  submission.py  train.py  visualization.py
src/view/: app.py
src/view/frames/: inference.py  inference_frame.py  performance.py  performance_frame.py  train.py  train_frame.py
