[tool.poetry]
name = "nuclei-segmentation"
version = "0.1.0"
description = ""
authors = ["yelmokht <younes.el.mokhtari@ulb.be>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
sv-ttk = "^2.6.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-image = "0.19.3"
tqdm = "^4.66.2"
customtkinter = "^5.2.2"
keras = "2.15"
tensorflow = "2.15"
tensorflow-addons = "^0.23.0"
segmentation-models = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
