[tool.poetry]
name = "nuclei-segmentation"
version = "0.1.0"
description= "An application designed to accurately segment nuclei cells across diverse conditions using pretrained models."
authors = ["yelmokht <younes.el.mokhtari@ulb.be>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.12"
sv-ttk = "^2.6.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
scikit-image = "0.19.3"
tqdm = "^4.66.2"
customtkinter = "^5.2.2"
keras = "2.15.0"
tensorflow = "2.15.0"
tensorflow-addons = "0.23.0"
segmentation-models = "1.0.1"
scikit-learn = "^1.4.2"
gdown = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
